# digital-public-safety-ai

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
backend/: .env.example  requirements.txt  test_model.py  test_prediction.py  test_scam_model.py
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  constants.py  errors.py  exceptions.py  lifespan.py  logging_config.py  paths.py  responses.py
backend/app/db/: __init__.py  base.py  database.py
backend/app/entities/: __init__.py  audit_log.py  base_entity.py  counterfeit_report.py  fraud_cluster.py  fraud_edge.py  fraud_node.py  model_registry.py  scam_report.py
backend/app/middleware/: logging.py
backend/app/ml/: __init__.py  base.py  registry.py
backend/app/repositories/: __init__.py  audit_repository.py  base_repository.py  counterfeit_repository.py  fraud_repository.py  model_repository.py  scam_repository.py
backend/app/routers/: counterfeit.py  health.py  scam.py  version.py
backend/app/schemas/: common.py  counterfeit.py  model_info.py  scam.py  upload.py
backend/app/services/: __init__.py  counterfeit_service.py  scam_service.py
backend/app/tests/: test_counterfeit_api.py  test_health.py
backend/app/utils/: file_storage.py
docs/adr/: README.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  counterfeit.ts  scam.ts
frontend/src/components/: Badge.tsx  Button.tsx  Card.tsx  FileUpload.tsx  Input.tsx  Loader.tsx  Modal.tsx  Navbar.tsx  (+3 more)
(+25 files in other folders)
