[project]
name = "digital-public-safety"
version = "0.1.0"
description = "AI-powered Digital Public Safety Platform"
requires-python = ">=3.11"

authors = [
    { name = "Digital Public Safety Team" }
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = [
    "E501","B008",
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = [
    "backend"
]